--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.12.2</version>
+        </dependency>
+
     </dependencies>
 
 
